# uniremote

./: AGENT.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
core/: AGENT.md  Cargo.toml
core/src/: context.rs  id.rs  layout.rs  lib.rs  message.rs  meta.rs
input/: AGENT.md  Cargo.toml
input/src/: lib.rs  uinput.rs
loader/: AGENT.md  Cargo.toml
loader/src/: lib.rs
lua/: AGENT.md  Cargo.toml
lua/src/: extra.rs  fs.rs  globals.rs  http.rs  include.rs  keyboard.rs  lib.rs  mouse.rs  ps.rs  script.rs  server.rs  state.rs  timer.rs  worker.rs
render/: AGENT.md  Cargo.toml
render/src/: buffer.rs  layout.rs  lib.rs
server/: AGENT.md  Cargo.toml  SSE_USAGE.md
server/assets/: frontend.js  style.css
server/src/: args.rs  auth.rs  handlers.rs  lib.rs  main.rs  qr.rs  state.rs  websocket.rs
worker/: AGENT.md  Cargo.toml
worker/src/: lib.rs  subscription.rs
