[workspace]
members = ["core", "loader", "render", "input", "lua", "server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
