[workspace]
members = ["core", "loader", "render", "input", "lua", "worker", "server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
flume = "0.12"
axum = { version = "0.8", features = ["json"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serde", "async"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
chrono = "0.4"
tempfile = "3"
dirs = "5"
shellexpand = "3"
