[package]
name = "uniremote-loader"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
uniremote-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde-java-properties.workspace = true
quick-xml.workspace = true
xdg.workspace = true
tracing.workspace = true
walkdir = "2"
