[package]
name = "uniremote-loader"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
uniremote-core = { path = "../core" }
uniremote-lua = { path = "../lua" }
uniremote-input = { path = "../input" }
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

walkdir = "2"
xdg = "3.0"
serde-java-properties = "0.2"
quick-xml = { version = "0.38", features = ["serialize"] }
