[package]
name = "uniremote-lua"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
uniremote-core = { path = "../core" }
uniremote-input = { path = "../input" }
mlua.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
