[package]
name = "uniremote-lua"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
uniremote-core = { path = "../core" }
uniremote-input = { path = "../input" }

mlua.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
flume.workspace = true
tracing.workspace = true

chrono = "0.4"
tempfile = "3"
sysinfo = "0.37"
reqwest = "0.13"
dirs = "5"
shellexpand = "3"
walkdir = "2"
