[package]
name = "uniremote-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
uniremote-core = { path = "../core" }
uniremote-loader = { path = "../loader" }
uniremote-render = { path = "../render" }
uniremote-lua = { path = "../lua" }

axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
headers = "0.4"
headers-accept = "0.3"
local-ip-address = "0.6"
mediatype = "0.21"
qrcode = { version = "0.14", default-features = false }
dotenvy = "0.15"

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
