[package]
name = "uniremote-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
uniremote-core = { path = "../core" }
uniremote-loader = { path = "../loader" }
uniremote-render = { path = "../render" }
uniremote-worker = { path = "../worker" }

axum = { workspace = true, features = ["ws"] }
anyhow.workspace = true
tokio.workspace = true
flume.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
headers = "0.4"
headers-accept = "0.3"
local-ip-address = "0.6"
mediatype = "0.21"
qrcode = { version = "0.14", default-features = false }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.9"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
xdg = "3.0"
futures-util = "0.3"
